mejora de estructura

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-userDB=iQwrJ3Dx3y
-database=iQwrJ3Dx3y
-passwordDB=WECtOQWLCu
-hostDB=remotemysql.com
+userDB=root
+database=railway
+passwordDB=2SDpamUQmLwyub4fWiLV
+hostDB=containers-us-west-120.railway.app
+portDB=6908
 typeDB=mysql
 debug=true
