--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
+    "luxon": "^3.1.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.25.3",
     "uuid": "^9.0.0"
